<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/choice_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btnLvl1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient1"
        android:text="@string/buttonLevel1"
        android:textColor="	#FFFAFA"
        android:textSize="17sp"
        android:textStyle="bold"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLvl2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient2"
        android:text="@string/buttonLevel2"
        android:textColor="	#FFFAFA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLvl1" />

    <Button
        android:id="@+id/btnLvl3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient2"
        android:text="@string/buttonLevel3"
        android:textColor="	#FFFAFA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLvl2" />

    <Button
        android:id="@+id/btnLvl4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient2"
        android:text="@string/buttonLevel4"
        android:textColor="	#FFFAFA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLvl3" />

    <Button
        android:id="@+id/btnLvl5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_gradient2"
        android:text="@string/buttonLevel5"
        android:textColor="	#FFFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLvl4" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/score"
        android:textColor="	#FFFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLvl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>