<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/motivator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_brains"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient1"
        android:textColor="	#FFFAFA"
        android:textStyle="bold|italic"
        android:onClick="onClick"
        android:text="@string/buttonStart"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAssessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--android:background="@android:color/transparent"-->


    <Button
        android:id="@+id/buttonAssessment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/btn_gradient1"
        android:textColor="	#FFFAFA"
        android:textStyle="bold"
        android:text="@string/buttonAssessment"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWrite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonWrite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient1"
        android:textColor="	#FFFAFA"
        android:textStyle="bold"
        android:text="@string/buttonWrite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRemoveAd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAssessment" />

    <Button
        android:id="@+id/buttonRemoveAd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_gradient1"
        android:textColor="	#FFFAFA"
        android:textStyle="bold"
        android:text="@string/buttonRemoveAd"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWrite" />

</android.support.constraint.ConstraintLayout>